Release 3 (2012-04-26)
======================

Documentation
-------------

 - Added a fallback to local jQuery UI library if the CDN fails
 - Added the undum namespace to examples where it was missing
 - Removed the rather weak "resources" section from the Undum introduction
 - Added a link to Starborn
 - Added links to example stories' source codes
 - Added a section about link popups to the documentation and the API
 - Removed the vertical scroll bars from the code examples
 - Added a note about Mobile Safari audio limitations
 

Examples
--------

 - New folder structure in preparation for Inform 7 examples
 - Added the Inform 7 preview
 - One With Everything: Fixed a bug where navigation buttons would be
   duplicated when a save game was erased
 - Rabbithole: Switched to using the notify module instead of jQuery UI


Libraries
---------

 - Added the noty library
 - Updated to latest qTip2
 

Modules
-------

 - Added the notify module
    
    
Releases
--------

 - Added the missing qTip CSS file to the Undum theme
 


Release 2 (2012-02-04)
======================

Documentation
-------------

 - Fixed the documentation for preloading multiple images.
 - Added a note about playing sounds in iOS devices.
 

Examples
--------

 - Down the Rabbit-Hole now preloads the images it uses.


Libraries
---------

 - Updated jQuery to 1.7.1.
 

Modules
-------

 - Buttons: rewrote the button system.
 - Core: added Crockford's inheritance method.
 - Core: passing the Undum engine to the initializer is now mandatory. 
 - Core: added a function for "clicking" links.
 - HTML: link() accepts the link building parameters as a single object.
 - HTML: link() can create multiple choice popups.
 - HTML: url() now recognizes that filenames starting with ./ or ../ should
   not have the default directory prepended to them. 
 - Media: added isMuted().
 - Tooltip: removed a stray uninitialized variable that caused problems 
   in some browsers.
 
 
Releases
--------
